--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   border: 1px;
   margin: 56px auto 0px;
   padding: 0 24px;
