--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
 */
   /*background: color image repeat position/size*/
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -43,7 +44,6 @@ body * {
 #container {
   width: 100%;
   max-width: 588px;
-  border: 1px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -72,7 +72,7 @@ body * {
   width: 64px;
 
  margin:4px auto;
-  margin-bottom: 40px;
+ margin-bottom: 40px;
 
 }
 
@@ -175,4 +175,16 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries*/
+@media (min-width:700px) {
+  :root{
+  --bg-url:url(./assets/bg-desktop.jpg);
+  }
+
+  .light{
+  --bg-url:url(./assets/bg-desktop-light.jpg);
+  }
+
 }
