--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body * {
 
 #container {
   width: 100%;
-  max-width: 588px;
+  max-width: 375px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -130,6 +130,7 @@ ul li a {
   align-items: center;
 
   padding: 16px 24px;
+  margin-right: 50px;
 
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
@@ -157,6 +158,7 @@ ul li a:hover {
   justify-content: center;
 
   padding: 24px 0;
+  margin-right: 50px;
 
   font-size: 24px;
 }
