--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --text-color: white;
+  --text-color: rgb(251, 255, 0);
   --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color: rgba(255, 255, 255, 0.05);
@@ -14,7 +14,7 @@
   --highlight-switch: url(assets/moon-stars.svg);
 }
 .light {
-  --text-color: black;
+  --text-color: white;
   --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.02);
